<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="sensorAdapter"
            type="com.example.mqttdemo.view.dashboard.sensor.SensorAdapter" />

        <variable
            name="deviceItem"
            type="com.example.mqttdemo.view.dashboard.DeviceItem" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/deviceIDTextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/device"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/deviceIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/deviceIDTextLabel"
                android:text="@{deviceItem.deviceId}"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/pubMessageInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deviceIDText"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/pubMessageButton"
                android:ems="100"
                android:hint="@string/message"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck"
                android:autofillHints="Message"
                android:inputType="text" />

            <Button
                android:id="@+id/pubMessageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/downArrow"
                android:layout_below="@+id/deviceIDText"
                android:text="@string/send" />

            <ImageView
                android:id="@+id/downArrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="2dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="0dp"
                android:layout_below="@+id/deviceIDText"
                android:src="@{deviceItem.visibility ? @drawable/ic_arrow_up : @drawable/ic_arrow_down}"
                android:contentDescription="@string/arrow" />

            <!-- SensorItem RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sensorRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pubMessageInput"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                android:padding="4dp"
                android:visibility="gone"
                android:scrollbars="vertical"
                app:visible="@{deviceItem.visibility}"
                app:setHasFixedSize="@{true}"
                tools:listitem="@layout/sensor_item"
                tools:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:recyclerViewAdapter="@{sensorAdapter}" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>